# server/docs/swagger.yaml
@@ -131,42 +131,18 @@ definitions:
       thread:
         $ref: '#/definitions/chat_svc.Thread'
     type: object
-  config_svc.AppServiceConfig:
-    properties:
-      loggingDisabled:
-        type: boolean
-    type: object
   config_svc.Config:
     properties:
-      app:
-        $ref: '#/definitions/config_svc.AppServiceConfig'
-      directory:
-        type: string
-      download:
-        $ref: '#/definitions/config_svc.DownloadServiceConfig'
-      isRuntimeInstalled:
-        description: "* This flag drives a minor UX feature:\n\t * if the user has
-          not installed the runtime we show an INSTALL\n\t * button, but if the user
-          has already installed the runtime we show\n\t * we show a START runtime
-          button.\n\t *"
-        type: boolean
-      model:
-        $ref: '#/definitions/config_svc.ModelServiceConfig'
-    type: object
-  config_svc.DownloadServiceConfig:
-    properties:
-      downloadFolder:
-        type: string
+      data:
+        additionalProperties: true
+        type: object
+    required:
+    - data
     type: object
   config_svc.GetConfigResponse:
     properties:
       config:
         $ref: '#/definitions/config_svc.Config'
-    type: object
-  config_svc.ModelServiceConfig:
-    properties:
-      currentModelId:
-        type: string
     type: object
   config_svc.SaveConfigRequest:
     properties:
